--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -82,8 +82,8 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         ```
 5. Three-hour, tree hour and three hours'
     Rule:
-    > a three-hour/three hour trip, three hours' trip
-      three-hour=three hour
+    > a three-hour/three hour trip, three hours' trip.
+      three-hour=three hour.
       three hours' 前面不加冠词  --Jo
 
     ```
@@ -93,3 +93,19 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
              --It's about a () drive.
              A 20 minute B 20 minutes C 20 minutes' D 20-minutes
     ```
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
