--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -20,12 +20,15 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     ```
     
 2. Question Tags
+
+   Rule:**强调句反义it**
    ```
     1. [EX10] It was Mr.Smith that you meet at the meeting, ()?
               A wasn't it B wasn't he C wasn't Mr.Smith D didn't you
    ```
     
 3. Times
+
     Rule: **倍数+more than/as...as**
     ```
     [EX10] The new road is () of the old one
@@ -43,6 +46,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
             D 10 kilometer;30 minute
         ```
     - the word "open"
+    
         Rule:
         >插播一个小知识点复习，过去4年加试选择题考了这个3次：open作为商店开门开业时的辨析，我整理了一下，如果不清楚可记好了哦
         表示开业用动词，不用被动
@@ -64,6 +68,8 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         ```
         
     - Question Tag "What" and "How"
+    
+        Rule: **What fun, what the cost is**
         ```
         1. [SELF] () it is to beat ZJS hard!
                     A What fun B How fun C What a fun D How a fun
@@ -74,6 +80,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
                     D how much the buis ticket spends
         ```
     - The word "marry"
+    
         Rule: **Marry无论怎样都加to，不要想当然！！**
         ```
         [EX07]When I met Mike last Sunday, he told me that he () the actress for almost two years.
@@ -81,6 +88,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         C had been married with D had got married to
         ```
 5. Three-hour, tree hour and three hours'
+
     Rule:
     > a three-hour/three hour trip, three hours' trip.
       three-hour=three hour.
