--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -101,7 +101,25 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
              --It's about a () drive.
              A 20 minute B 20 minutes C 20 minutes' D 20-minutes
     ```
-    
+6. So am I
+    - If clause
+
+        Rule:**用应该用的时态，不受if控制**
+        ```
+        [GM07] If you don't go to his birthday party next Friday, ()
+        A so do I
+        B so will I
+        C nor do I
+        D nor will I
+        ```
+    - Two or more things
+        
+        Rule: **提到多件事时，只能用I'm the same**
+        ```
+        [GM07] --I seldom watch TV but listen to the radio a lot
+               --()
+               A So do I B So do you C So I do D I'm the same
+        ```
 
 
 
