--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -69,7 +69,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         
     - Question Tag "What" and "How"
     
-        Rule: **What fun, what the cost is**
+        Rule: **What fun, what the cost is, what's up,what to do**
         ```
         1. [SELF] () it is to beat ZJS hard!
                     A What fun B How fun C What a fun D How a fun
@@ -78,6 +78,10 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
                     B how much does the bus ticket cost
                     C how much the cost of the bus ticket is
                     D how much the buis ticket spends
+        3. [GM08] I think that father would like to know () I've been up to so far, so I decided to send him a quick note.
+                A which B why C what D how
+        4. [GM08] People have heard what the president has said; they are waiting to see () he will do
+                A how B what C when D that
         ```
     - The word "marry"
     
