--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -21,10 +21,12 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     
 2. Question Tags
 
-   Rule:**强调句反义it**
+   Rule:**强调句反义it。想当然否定转移不可取**
    ```
     1. [EX10] It was Mr.Smith that you meet at the meeting, ()?
               A wasn't it B wasn't he C wasn't Mr.Smith D didn't you
+    2. [ZM03] We can hardly imagine what life without the Internet will be like in the future, ________?
+              A. can we B. can’t we C. will it D. won’t it
    ```
     
 3. Times
