--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -93,6 +93,14 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         A had married B had been married to 
         C had been married with D had got married to
         ```
+    
+    - Whoever, No matter who
+        Rule: **No matter who不可作为表语**
+        ```
+        1.[SELF] ________ breaks the law will be punished.
+        A. Anyone B. One C. Whoever D. No matter who
+        ```
+        
 5. Three-hour, tree hour and three hours'
 
     Rule:
