--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -134,14 +134,14 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
                --()
                A So do I B So do you C So I do D I'm the same
         ```
+7. Negative Moving
 
-
-
-
-
-
-
-
+    Rule: **believe,think等词在主语是第一人称时需要否定前移**
+    ```
+    1.[ZM03] ________ that not all government officials are honest. 
+     A. It seems to me B. In my opinion, I believe 
+     C. My believing is D. I think in my mind
+    ```
 
 
 
