--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -134,7 +134,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
                --()
                A So do I B So do you C So I do D I'm the same
         ```
-7. Negative Moving
+7. Transferred negation
 
     Rule: **believe,think等词在主语是第一人称时需要否定前移**
     ```
@@ -143,9 +143,35 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
      C. My believing is D. I think in my mind
     ```
 
+8. Non predicate verb
+    - Read Problems Carefully
+        
+        Rule: **Read more carefully**
+        ```
+        1.[KG02] ________, the players tried their best to win the game for their country.
+        A. Greatly encouraged B. Having greatly encouraged C. To be encouraged D. Greatly encouraging
+        ```
+    - Leading verbs
+    
+        Rule **动词作主语需要用动名词**
+        ```
+        [KG02] _________ abroad for a tour can be a great honor for an ordinary person like me.
+            A. Taken B. Being taken C. Taking D. Having been taken
+        ```
+9. Fake Passive Voice
+    
+    Rule: **主动表被动 be+adj+of**
+    ```
+    1.[KG02] I’m afraid we’ll have to work extra hours for there are still some problems ______. <--不是主动表被动！！
+        A. remaining to settle B. remaining to be settled C. remained to talk about D. to remain to discuss
+    2.[SELF] These problems are easy to ()
+        A solve B solved C be solved D solving
+    ```
+10. Passive "seen"
 
-
-
-
-
-
+    Rule: **sb be seen to do sth**
+    ```
+        26.[KG02] The boy is often seen ______ basketball alone on the basket court, but he was seen ______ with many other boys at 3 
+            o’clock yesterday afternoon. 
+            A. play, playing B. playing, play C. to play, playing D. to play, play
+    ```
