--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -17,6 +17,16 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
                 B Forget it
                 C That's not the point
                 D You're welcome
+    4. [SELF] --Can you help me beat ZJS hard? --()
+                A With pleasure
+                B It's my pleasure
+                C No, I won't
+                D Yes, I could.
+    5. [SELF] --Thank you for your help. --()
+                A With pleasure
+                B It's my pleasure
+                C Thank you
+                D No. I could have done better.
     ```
     
 2. Question Tags
