--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -105,6 +105,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         ```
     
     - Whoever, No matter who
+    
         Rule: **No matter who不可作为表语**
         ```
         1.[SELF] ________ breaks the law will be punished.
@@ -184,4 +185,13 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         26.[KG02] The boy is often seen ______ basketball alone on the basket court, but he was seen ______ with many other boys at 3 
             o’clock yesterday afternoon. 
             A. play, playing B. playing, play C. to play, playing D. to play, play
+    ```
+
+11. the other, the others, the rest, another, etc
+    
+    Rule: **one用于特指，the other,the others在一个范围内，another 另一个，the rest剩下的**
+    ```
+    1. [KG04] Some of the wheat is from Canada. What about ______? A. another B. the other C. others D. the rest
+    2. [KG04] Mr. and Mrs. Scott prefer a trip in a small town to _____in so large a city as New York. 
+                A. this B. it C. one D. that
     ```
