--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -195,3 +195,17 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     2. [KG04] Mr. and Mrs. Scott prefer a trip in a small town to _____in so large a city as New York. 
                 A. this B. it C. one D. that
     ```
+12. A,An,The
+
+    Rule: **by the year of/in one's twentieth/A Mr.green is calling/come to an end/a second time/in the 1990s**
+    ```
+    1. [KG04] ______ recent report stated that the number of Spanish speakers in the US would be higher than the number of English 
+            speakers by ______ year 2090. 
+            A. The, / B. A; / C. A; the D. The; a
+    2. [KG04] You made the same mistake for ________ second time, dropping ________ “n” in the word “government”.
+            A. a, the B. a, a C. the, an D. a, an
+    3. [KG04] Our New Year party was _____ success. We sang and danced until it came to _____ end at 10 o’clock.
+            A. a; the B. a; an C. the; an D. /; the
+    4. [KG04] It is not rare in ______ that people in ______ fifties are going to university for further education.
+            A. 1990s; their B. the 1990s; / C. 1990s; / D. the 1990s; their
+    ```
