--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -209,3 +209,22 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     4. [KG04] It is not rare in ______ that people in ______ fifties are going to university for further education.
             A. 1990s; their B. the 1990s; / C. 1990s; / D. the 1990s; their
     ```
+13. Preposition
+    
+    - Match-ups
+    
+        Rule: **sell by the tons/pay in cash/popular across the country/in north of 内部/on north of外部/difference between**
+        ```
+        1.[KG06] China lies ____ the east of Asia and _____ the north of Australia. A. to, to B. in, to C. to, in D. in, on
+        2.[KG06] --Do you like The Legend of Bruce Lee? ---Yes. I think it is popular ____ the country.
+                    A. through B. across C. over D. from
+        3.[KG06] The coal is sold __________ the ton and buyers can’t pay using credit card, so we have to pay __________ cash.
+                    A. by, in B. at, for C. in, with D. with, by
+        4.[KG06] The differences __________ these two pictures __________ color are easy to see. 
+                    A. in, of B. from, of C. between, in D. of, in
+    - Except/Except for
+        
+        ```
+        1.[KG06] Your dress looks nice ______ the color. A. besides B. beside C. except for D. except
+        ```
+    
