--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -27,6 +27,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
                 B It's my pleasure
                 C Thank you
                 D No. I could have done better.
+    6. [KG03] --May I ask a favor of you? --______. A. It's my pleasure B. I've no time C. With pleasure D. Sure, go ahead (注：没讲搞什么，不用with pleasure)
     ```
     
 2. Question Tags
