--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -113,6 +113,13 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         A. Anyone B. One C. Whoever D. No matter who
         ```
         
+    - But and However
+    
+        Rule: **However带逗号，but不带逗号**
+        
+        ```
+        1.[KG08] --What do you think of Jerry? — He is clever. ____, he can be forgetful. A. And B. So C. But D. However
+        ```
 5. Three-hour, tree hour and three hours'
 
     Rule:
