--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -235,4 +235,14 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         ```
         1.[KG06] Your dress looks nice ______ the color. A. besides B. beside C. except for D. except
         ```
+14. Much more & Many more
     
+    Rule: **可数名词用many，不可数名词/形容词用much**
+    
+    ```
+    1.[KG13]--Did they offer us enough books? --______ than we had expected.
+                A. Much more B. Many more C. Little more D. Rather
+    2.[SELF]--I think this movie is () than the previous one.
+                A much more interesting B many more interested
+                C much more interested D many more interested
+    ```
