--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -7,7 +7,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     1. [ZH01] --There are probably aliens living here on earth?
               --()!I can't believe you said that.
               A come on B Forget it C Go ahead D Not my thing
-    2. [EX10] -- Surely you can turn to David for help. --().He is the last one you can rely on.
+    2. [EX10] -- Surely you can turn to David for help. --().He is the last one you can rely on. (注：「the last one you can rely on」=「You can't rely on him」)
               A I beg your pardon?
               B That's not the point
               C I couldn't agree more
@@ -17,7 +17,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
                 B Forget it
                 C That's not the point
                 D You're welcome
-    4. [SELF] --Can you help me beat ZJS hard? --()
+    4. [SELF] --Can you help me beat ZJS hard? --() (注：区分With please「我很乐意」，it's my pleasure回答thank you)
                 A With pleasure
                 B It's my pleasure
                 C No, I won't
@@ -28,6 +28,8 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
                 C Thank you
                 D No. I could have done better.
     6. [KG03] --May I ask a favor of you? --______. A. It's my pleasure B. I've no time C. With pleasure D. Sure, go ahead (注：没讲搞什么，不用with pleasure)
+    7. [KG13]I can't thank you ______ much for your kindness, because without your help I wouldn't have succeeded in the exam.
+                A. too B. very C. quite D. that (注：can't thank too much不胜感激)
     ```
     
 2. Question Tags
