--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -248,3 +248,14 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
                 A much more interesting B many more interested
                 C much more interested D many more interested
     ```
+
+15. Two hundred, Hundreds of, Two hundreds of
+
+    Rule: **有数字不加of，二者选一。Two hundreads of用于特定群体**
+    ```
+    1.[KG14] ____________ the people visited the Space Museum last month.
+        A. Two thousands B. Two thousand C. Two thousand of D. Thousands of
+    2.[SELF] ____________ people visited the Space Museum last month.
+        A. Two thousands of B. Two thousands C. Two thousand of D. Thousands of
+    ```
+    
