--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -259,3 +259,20 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         A. Two thousands of B. Two thousands C. Two thousand of D. Thousands of
     ```
     
+16. A great many (of)
+
+Rule:
+>   一、a great many后直接修饰名词,名词可以有修饰语,如:
+    a great many students
+    a great many young students
+    二、a great many of后主要接：
+    1.代词：a great many of them
+    2.受冠词修饰的名词：a great many of the students
+    3.受these,those修饰的名词：a great many of these students
+    4.受物主代词修饰的名词：a great many of my students
+    5.受所有格修饰的名词：a great many of Tom's students --Zybang
+    
+```
+1.[KG14] ________ houses were knocked down in the earthquake.
+A. A great many B. The number of C. A great many of D. A great deal of
+```
