--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -122,6 +122,13 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         ```
         1.[KG08] --What do you think of Jerry? — He is clever. ____, he can be forgetful. A. And B. So C. But D. However
         ```
+    - do harm
+    
+        Rule: **do harm to**
+        ```
+        1.[KG19] Once harm is _______ to the eco-system, all species will ________, including man himself. 
+                A. made; be in danger B. done; be dangerous C. caused; be endangered D. done; be in danger
+        ```
 5. Three-hour, tree hour and three hours'
 
     Rule:
