--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -129,6 +129,13 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         1.[KG19] Once harm is _______ to the eco-system, all species will ________, including man himself. 
                 A. made; be in danger B. done; be dangerous C. caused; be endangered D. done; be in danger
         ```
+
+    - at their own ...
+        
+        Rule: **at their own risk 自负 at their own expense自费**
+        ```
+        1.[KG20] Now an increasing number of middle school students go abroad for further study at their own , trying hard to realize their dreams. A. prices B. costs C. expenses D. pays
+        ```
 5. Three-hour, tree hour and three hours'
 
     Rule:
