--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -30,6 +30,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     6. [KG03] --May I ask a favor of you? --______. A. It's my pleasure B. I've no time C. With pleasure D. Sure, go ahead (注：没讲搞什么，不用with pleasure)
     7. [KG13]I can't thank you ______ much for your kindness, because without your help I wouldn't have succeeded in the exam.
                 A. too B. very C. quite D. that (注：can't thank too much不胜感激)
+    8. [KK23]They had a pleasant chat ________ a cup of coffee. A. over B. while C. with D. during (注：over a cup of coffee一杯咖啡的时间之内)
     ```
     
 2. Question Tags
