--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -31,6 +31,10 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     7. [KG13]I can't thank you ______ much for your kindness, because without your help I wouldn't have succeeded in the exam.
                 A. too B. very C. quite D. that (注：can't thank too much不胜感激)
     8. [KK23]They had a pleasant chat ________ a cup of coffee. A. over B. while C. with D. during (注：over a cup of coffee一杯咖啡的时间之内)
+    9. [KK23]---It is 3 years since I worked here.（译：我三年不在这儿工作了）
+             ---________
+            A. Where do you work now? B. The work here is good.
+            C. Do you enjoy working here now? D. When did you start working here?
     ```
     
 2. Question Tags
