--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -141,6 +141,22 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         ```
         1.[KG20] Now an increasing number of middle school students go abroad for further study at their own , trying hard to realize their dreams. A. prices B. costs C. expenses D. pays
         ```
+    - fish
+        
+        Rule: **fish单复数同形**
+        ```
+        1.[KG??] --_____ you have bought me! — I got *them* at the market.
+                A. What a big fish B. How a big fish C. What big fish D. How big fish
+        ```
+        
+    - have sb do & have sb done
+        
+        Rule: **have sb do 让某人做某事  have sb done使被**
+        ```
+        1.[KG??]We asked if the doctor ______ the boy ______ a walk after supper next week.
+            A. would allow, taking B. would have, take C. would have, taken D. made, take
+        ```
+        
 5. Three-hour, tree hour and three hours'
 
     Rule:
