--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -156,6 +156,13 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         1.[KG??]We asked if the doctor ______ the boy ______ a walk after supper next week.
             A. would allow, taking B. would have, take C. would have, taken D. made, take
         ```
+    - a bit & a little
+    
+        Rule: **not a bit=not at all, not a little=very**
+        ```
+        1.[KG??] She was not _____ frightened, in fact she was nearly frightened to death. A. a bit B. at all C. a little D. much
+        ```
+
         
 5. Three-hour, tree hour and three hours'
 
