--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -163,6 +163,20 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         1.[KG??] She was not _____ frightened, in fact she was nearly frightened to death. A. a bit B. at all C. a little D. much
         ```
 
+    - supply, offer, provide
+    
+        Rule: 
+        >offer
+        offer sb sth offer sth to sb 被动只有be offered to
+        provide
+        provide sth for sb provide sb with sth 被动只有be provided for
+        supply
+        supply sth for sb(with很少见，可以认为基本不用) supply sth to sb
+        
+        ```
+        1.[KG??] More food ______ to the poor by the government next week.
+            A. will be supplied B. would be offered C. will be provided D. would be given
+        ```
         
 5. Three-hour, tree hour and three hours'
 
