--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -171,13 +171,20 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         provide
         provide sth for sb provide sb with sth 被动只有be provided for
         supply
-        supply sth for sb(with很少见，可以认为基本不用) supply sth to sb
+        supply sth for sb(with很少见，可以认为基本不用) supply sth to sb --Zhuky.RLG
         
         ```
         1.[KG??] More food ______ to the poor by the government next week.
             A. will be supplied B. would be offered C. will be provided D. would be given
         ```
         
+    - panic, picnic
+        
+        Rule: **panic和picnic不规则。其现在时为picnicking**
+        ```
+        1.[GMR1]Look!  The children _______(picnic) on the grass. They _____(be) so happy
+        ```
+   
 5. Three-hour, tree hour and three hours'
 
     Rule:
@@ -332,3 +339,14 @@ Rule:
 1.[KG14] ________ houses were knocked down in the earthquake.
 A. A great many B. The number of C. A great many of D. A great deal of
 ```
+
+# Code & Source 
+
+- KGxx=Zhuky.RLG's Grammar Paper
+- SELF=self-made problem
+- ZMxx=XIZCM's Reviewing Paper
+- GMxx=Grammer Book
+- GMRx=Grammer Book Reviewing Section
+- EXxx=XGN's Reviewing Paper
+- KKxx=Zhuky.RLG's Reviewing Paper
+- ZHxx=NFLS's Reviewing Paper
