--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -326,22 +326,31 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     
 16. A great many (of)
 
-Rule:
->   一、a great many后直接修饰名词,名词可以有修饰语,如:
-    a great many students
-    a great many young students
-    二、a great many of后主要接：
-    1.代词：a great many of them
-    2.受冠词修饰的名词：a great many of the students
-    3.受these,those修饰的名词：a great many of these students
-    4.受物主代词修饰的名词：a great many of my students
-    5.受所有格修饰的名词：a great many of Tom's students --Zybang
-    
-```
-1.[KG14] ________ houses were knocked down in the earthquake.
-A. A great many B. The number of C. A great many of D. A great deal of
-```
+    Rule:
+    >   一、a great many后直接修饰名词,名词可以有修饰语,如:
+        a great many students
+        a great many young students
+        二、a great many of后主要接：
+        1.代词：a great many of them
+        2.受冠词修饰的名词：a great many of the students
+        3.受these,those修饰的名词：a great many of these students
+        4.受物主代词修饰的名词：a great many of my students
+        5.受所有格修饰的名词：a great many of Tom's students --Zybang
 
+    ```
+    1.[KG14] ________ houses were knocked down in the earthquake.
+    A. A great many B. The number of C. A great many of D. A great deal of
+    ```
+
+17. Indirect Speech and Direct Speech
+
+    Rule: **主语要变，动词要变**
+    ```
+    1.[GMR3] She asked me whether I had seen him the night before.
+    She asked," ___ ___ see him ___ ___?" (注意这边不用I)
+    2.[GMR3] My mother said to me: "Come back before 10"
+    My mother ____ me ____ ____ ____ before 10. (这里不用come)
+    ```
 # Code & Source 
 
 - KGxx=Zhuky.RLG's Grammar Paper
