--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -272,7 +272,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     ```
 12. A,An,The
 
-    Rule: **by the year of/in one's twentieth/A Mr.green is calling/come to an end/a second time/in the 1990s**
+    Rule: **by the year of/in one's twentieth/A Mr.green is calling/come to an end/a second time/in the 1990s/lose heart/in trouble**
     ```
     1. [KG04] ______ recent report stated that the number of Spanish speakers in the US would be higher than the number of English 
             speakers by ______ year 2090. 
@@ -283,6 +283,8 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
             A. a; the B. a; an C. the; an D. /; the
     4. [KG04] It is not rare in ______ that people in ______ fifties are going to university for further education.
             A. 1990s; their B. the 1990s; / C. 1990s; / D. the 1990s; their
+    5. [GMR3] Altough he was in ___ trouble, the great man would never lose ___ heart.
+            A /;/ B /;his C the;/ D the;his
     ```
 13. Preposition
     
