--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -157,6 +157,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         ```
         1.[KG??]We asked if the doctor ______ the boy ______ a walk after supper next week.
             A. would allow, taking B. would have, take C. would have, taken D. made, take
+        2.[GMR4] Tony had his grandmother ___(tie) his shoes, but his mother would rather !!!hadn't seen!!! that.
         ```
     - a bit & a little
     
@@ -185,6 +186,27 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
         Rule: **panic和picnic不规则。其现在时为picnicking**
         ```
         1.[GMR1]Look!  The children _______(picnic) on the grass. They _____(be) so happy
+        ```
+        
+    - Good enough
+    
+        Rule: **a good enough voice**
+        ```
+        1.[GMR4] I'd like to be a professional singer, but I don't think I've got ___.
+            A a good voice enough
+            B a good enough voice
+            C a voice enough good
+            D an enough good voice
+        ```
+    - well worth reading
+    
+        Rule: **well worth reading**
+        ```
+        1.[GMR4] Being ____, the novel written by a famous doctor sells ___
+            A very worth of being read, good
+            B well worth of reading, good
+            C well worth reading, well
+            D very worth reading, well
         ```
    
 5. Three-hour, tree hour and three hours'
@@ -272,7 +294,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     ```
 12. A,An,The
 
-    Rule: **by the year of/in one's twentieth/A Mr.green is calling/come to an end/a second time/in the 1990s/lose heart/in trouble**
+    Rule: **by the year of/in one's twentieth/A Mr.green is calling/come to an end/a second time/in the 1990s/lose heart/in trouble/in the Information Age**
     ```
     1. [KG04] ______ recent report stated that the number of Spanish speakers in the US would be higher than the number of English 
             speakers by ______ year 2090. 
@@ -285,6 +307,8 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
             A. 1990s; their B. the 1990s; / C. 1990s; / D. the 1990s; their
     5. [GMR3] Altough he was in ___ trouble, the great man would never lose ___ heart.
             A /;/ B /;his C the;/ D the;his
+    6. [GMR4] We are said to be living in ____ Information Age, ____ time of new discoveries and greet changes.
+            A. an;the B /;the C /;a D the;a
     ```
 13. Preposition
     
@@ -353,6 +377,7 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     2.[GMR3] My mother said to me: "Come back before 10"
     My mother ____ me ____ ____ ____ before 10. (这里不用come)
     ```
+    
 # Code & Source 
 
 - KGxx=Zhuky.RLG's Grammar Paper
