--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -35,6 +35,8 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
              ---________
             A. Where do you work now? B. The work here is good.
             C. Do you enjoy working here now? D. When did you start working here?
+    10. [KK29] -- Before I left, the shop owner took me _______ arm and told me that I could buy that pair of shoes _______ price. A. by the; at half the B. by his; half at the C. by; at half the  D. by a; at the half (注：by the arm 有强制的含义，同时表示挽住)
+    11. [KK29] --  News reports say peace talks between the two countries have _______ with no agreement reached.   A. broken up  B. broken out   C. broken down  D. broken away (注：break down （机器或车辆） 出毛病，损坏; （讨论、关系或系统） 失败，破裂，失灵; 分解; 将…分成若干部分; （使） （物质）分解; 感情失控（痛哭起来）; 捣毁; 拆除; 消除，破除（障碍或偏见）)
     ```
     
 2. Question Tags
