--- a/英语错题复习.md
+++ b/英语错题复习.md
@@ -379,6 +379,15 @@ From XGN,HHS. Wenqing Ge from Class 8 Junior 3, Nanjing Foreign Languages School
     2.[GMR3] My mother said to me: "Come back before 10"
     My mother ____ me ____ ____ ____ before 10. (这里不用come)
     ```
+
+18. Ending With, Starting With, etc
+
+    Rule: **Ending with, starting with, divided into**
+    
+    ```
+    1.[MCSC] The English Drama Festival was a great success, ____ a wonderful performance given by Junior Three students in the school hall.
+    A end with B ending with C ends with D ended with
+    ```
     
 # Code & Source 
 
